--- a/archives/toutiao-search/2023-10-04.md
+++ b/archives/toutiao-search/2023-10-04.md
@@ -1,61 +1,81 @@
 # 2023-10-04
 
-共 310 条
+共 327 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 04 2023 21:09:46 GMT+0800 (China Standard Time) -->
-1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
-1. [全红婵采访为何总躲陈芋汐身后](https://so.toutiao.com/search?keyword=全红婵采访为何总躲陈芋汐身后)
+<!-- 最后更新时间 Wed Oct 04 2023 22:00:46 GMT+0800 (China Standard Time) -->
+1. [中国男篮1分输菲律宾无缘亚运决赛](https://so.toutiao.com/search?keyword=中国男篮1分输菲律宾无缘亚运决赛)
+1. [麦卡锡成美国首位遭罢免众院议长](https://so.toutiao.com/search?keyword=麦卡锡成美国首位遭罢免众院议长)
 1. [公交车上的医院助力亚运医疗保障](https://so.toutiao.com/search?keyword=公交车上的医院助力亚运医疗保障)
 1. [马英九强硬反“台独”意味着什么](https://so.toutiao.com/search?keyword=马英九强硬反“台独”意味着什么)
-1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
-1. [中国男篮vs菲律宾冲击亚运决赛](https://so.toutiao.com/search?keyword=中国男篮vs菲律宾冲击亚运决赛)
+1. [中国跳水队包揽10金完美收官](https://so.toutiao.com/search?keyword=中国跳水队包揽10金完美收官)
 1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
-1. [特警碰掉游客小吃重新买了一份](https://so.toutiao.com/search?keyword=特警碰掉游客小吃重新买了一份)
+1. [游客自驾冲进羊群致30多只羊死伤](https://so.toutiao.com/search?keyword=游客自驾冲进羊群致30多只羊死伤)
+1. [印尼攀岩运动员起步失误仍反超对手](https://so.toutiao.com/search?keyword=印尼攀岩运动员起步失误仍反超对手)
 1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
-1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
-1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
-1. [官方辟谣举报高速违章1分钟赚3千](https://so.toutiao.com/search?keyword=官方辟谣举报高速违章1分钟赚3千)
-1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
+1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
 1. [中国游客回忆曼谷枪击案惊魂现场](https://so.toutiao.com/search?keyword=中国游客回忆曼谷枪击案惊魂现场)
+1. [官方辟谣举报高速违章1分钟赚3千](https://so.toutiao.com/search?keyword=官方辟谣举报高速违章1分钟赚3千)
 1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
-1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
+1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
+1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
+1. [记者：女足已落伍十年以上](https://so.toutiao.com/search?keyword=记者：女足已落伍十年以上)
+1. [特警碰掉游客小吃重新买了一份](https://so.toutiao.com/search?keyword=特警碰掉游客小吃重新买了一份)
+1. [马德兴：中国香港男足获历史性突破](https://so.toutiao.com/search?keyword=马德兴：中国香港男足获历史性突破)
+1. [假期第六天高速公路流量明显回升](https://so.toutiao.com/search?keyword=假期第六天高速公路流量明显回升)
 1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
-1. [记者“哄娃式”采访全红婵](https://so.toutiao.com/search?keyword=记者“哄娃式”采访全红婵)
+1. [中国台北队终于等到自己人加油](https://so.toutiao.com/search?keyword=中国台北队终于等到自己人加油)
+1. [中国队女子3米跳板包揽金银](https://so.toutiao.com/search?keyword=中国队女子3米跳板包揽金银)
+1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
+1. [各地返程高速路况：车队堵成长龙](https://so.toutiao.com/search?keyword=各地返程高速路况：车队堵成长龙)
+1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
 1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
-1. [西工大仿生飞行器刷新世界纪录](https://so.toutiao.com/search?keyword=西工大仿生飞行器刷新世界纪录)
-1. [诺奖获得者为何还是副教授](https://so.toutiao.com/search?keyword=诺奖获得者为何还是副教授)
+1. [全国各地陆续迎来返程交通流](https://so.toutiao.com/search?keyword=全国各地陆续迎来返程交通流)
+1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
+1. [《志愿军》累计观演人次突破1000万](https://so.toutiao.com/search?keyword=《志愿军》累计观演人次突破1000万)
+1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
+1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
+1. [亚冠：三镇1-3浦项积1分排小组第3](https://so.toutiao.com/search?keyword=亚冠：三镇1-3浦项积1分排小组第3)
+1. [外媒：麦卡锡被罢免 谁是接班人](https://so.toutiao.com/search?keyword=外媒：麦卡锡被罢免+谁是接班人)
+1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
+1. [记者“哄娃式”采访全红婵](https://so.toutiao.com/search?keyword=记者“哄娃式”采访全红婵)
 1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
+1. [西工大仿生飞行器刷新世界纪录](https://so.toutiao.com/search?keyword=西工大仿生飞行器刷新世界纪录)
+1. [拜登讲话时“突然僵住”](https://so.toutiao.com/search?keyword=拜登讲话时“突然僵住”)
+1. [《志愿军》还原了哪些真实场景](https://so.toutiao.com/search?keyword=《志愿军》还原了哪些真实场景)
+1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
+1. [全红婵采访为何总躲陈芋汐身后](https://so.toutiao.com/search?keyword=全红婵采访为何总躲陈芋汐身后)
+1. [欧盟对华电动汽车下手犯了哪些错误](https://so.toutiao.com/search?keyword=欧盟对华电动汽车下手犯了哪些错误)
+1. [台军“自造潜艇”被批粗制滥造](https://so.toutiao.com/search?keyword=台军“自造潜艇”被批粗制滥造)
+1. [泰枪击案嫌疑人被捕后曾与警察对话](https://so.toutiao.com/search?keyword=泰枪击案嫌疑人被捕后曾与警察对话)
+1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
+1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
+1. [女生张开双臂录视频 路人以为索抱](https://so.toutiao.com/search?keyword=女生张开双臂录视频+路人以为索抱)
+1. [饶欣雨获得田径女子800米第四名](https://so.toutiao.com/search?keyword=饶欣雨获得田径女子800米第四名)
+1. [张文宏点评mRNA疫苗技术获诺奖](https://so.toutiao.com/search?keyword=张文宏点评mRNA疫苗技术获诺奖)
+1. [三张图看清陈艺文“水花消失术”](https://so.toutiao.com/search?keyword=三张图看清陈艺文“水花消失术”)
+1. [中国男篮vs菲律宾冲击亚运决赛](https://so.toutiao.com/search?keyword=中国男篮vs菲律宾冲击亚运决赛)
+1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
+1. [诺奖获得者为何还是副教授](https://so.toutiao.com/search?keyword=诺奖获得者为何还是副教授)
 1. [男子问饭店内顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店内顾客好吃吗+回答亮了)
 1. [诺奖奖金为何越发越多](https://so.toutiao.com/search?keyword=诺奖奖金为何越发越多)
-1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
 1. [游客相机不慎掉进园区被大熊猫捡走](https://so.toutiao.com/search?keyword=游客相机不慎掉进园区被大熊猫捡走)
-1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
 1. [霍震霆在亚运村大采购](https://so.toutiao.com/search?keyword=霍震霆在亚运村大采购)
 1. [未来3天这些地方局地有暴雪大暴雪](https://so.toutiao.com/search?keyword=未来3天这些地方局地有暴雪大暴雪)
-1. [记者：女足已落伍十年以上](https://so.toutiao.com/search?keyword=记者：女足已落伍十年以上)
-1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
 1. [郭正亮：福建舰身上多处细节显战力](https://so.toutiao.com/search?keyword=郭正亮：福建舰身上多处细节显战力)
 1. [中国香港男足止步亚运会半决赛](https://so.toutiao.com/search?keyword=中国香港男足止步亚运会半决赛)
 1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
 1. [媒体：消费者有权对乱收费说“不”](https://so.toutiao.com/search?keyword=媒体：消费者有权对乱收费说“不”)
-1. [张文宏点评mRNA疫苗技术获诺奖](https://so.toutiao.com/search?keyword=张文宏点评mRNA疫苗技术获诺奖)
 1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
 1. [花两万多买摩托车却上不了牌照](https://so.toutiao.com/search?keyword=花两万多买摩托车却上不了牌照)
 1. [“国民女儿”全红婵请继续你的可爱](https://so.toutiao.com/search?keyword=“国民女儿”全红婵请继续你的可爱)
 1. [北京：假期后段及节后交通压力较大](https://so.toutiao.com/search?keyword=北京：假期后段及节后交通压力较大)
 1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
 1. [中国女排3-0韩国 提前锁定四强](https://so.toutiao.com/search?keyword=中国女排3-0韩国+提前锁定四强)
-1. [各地返程高速路况：车队堵成长龙](https://so.toutiao.com/search?keyword=各地返程高速路况：车队堵成长龙)
-1. [游客自驾冲进羊群致30多只羊死伤](https://so.toutiao.com/search?keyword=游客自驾冲进羊群致30多只羊死伤)
-1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
-1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
-1. [台军“自造潜艇”被批粗制滥造](https://so.toutiao.com/search?keyword=台军“自造潜艇”被批粗制滥造)
 1. [俄军称防空系统拦截31架乌军无人机](https://so.toutiao.com/search?keyword=俄军称防空系统拦截31架乌军无人机)
 1. [大熊猫渝可和奶妈的双向奔赴](https://so.toutiao.com/search?keyword=大熊猫渝可和奶妈的双向奔赴)
 1. [福建发布风暴潮蓝色预警](https://so.toutiao.com/search?keyword=福建发布风暴潮蓝色预警)
 1. [男子4X100米反超日本的陈佳鹏是谁](https://so.toutiao.com/search?keyword=男子4X100米反超日本的陈佳鹏是谁)
-1. [麦卡锡成美国首位遭罢免众院议长](https://so.toutiao.com/search?keyword=麦卡锡成美国首位遭罢免众院议长)
 1. [“一带一路”上的“中国造”](https://so.toutiao.com/search?keyword=“一带一路”上的“中国造”)
 1. [中国男子百米接力完成传承](https://so.toutiao.com/search?keyword=中国男子百米接力完成传承)
 1. [美国纽约一男子在女友眼前被捅死](https://so.toutiao.com/search?keyword=美国纽约一男子在女友眼前被捅死)
@@ -68,13 +88,11 @@
 1. [带你游广西百魔洞](https://so.toutiao.com/search?keyword=带你游广西百魔洞)
 1. [亚运1亿数字火炬手创造新世界纪录](https://so.toutiao.com/search?keyword=亚运1亿数字火炬手创造新世界纪录)
 1. [新人租公交当婚车 氛围感拉满](https://so.toutiao.com/search?keyword=新人租公交当婚车+氛围感拉满)
-1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
 1. [全红婵说单人赛感觉旁边少了个人](https://so.toutiao.com/search?keyword=全红婵说单人赛感觉旁边少了个人)
 1. [餐厅收取餐具费合理吗](https://so.toutiao.com/search?keyword=餐厅收取餐具费合理吗)
 1. [通用和福特拟在美国再裁员500人](https://so.toutiao.com/search?keyword=通用和福特拟在美国再裁员500人)
 1. [撒贝宁带老婆回沈阳婆家](https://so.toutiao.com/search?keyword=撒贝宁带老婆回沈阳婆家)
 1. [广州今日起迎返程高峰](https://so.toutiao.com/search?keyword=广州今日起迎返程高峰)
-1. [拜登讲话时“突然僵住”](https://so.toutiao.com/search?keyword=拜登讲话时“突然僵住”)
 1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
 1. [文旅局回应内蒙古一景区游客喊退票](https://so.toutiao.com/search?keyword=文旅局回应内蒙古一景区游客喊退票)
 1. [男子问饭店顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店顾客好吃吗+回答亮了)
@@ -101,7 +119,6 @@
 1. [提议罢免美众议长的人或将被边缘化](https://so.toutiao.com/search?keyword=提议罢免美众议长的人或将被边缘化)
 1. [伊朗公布军演期间监视美军舰画面](https://so.toutiao.com/search?keyword=伊朗公布军演期间监视美军舰画面)
 1. [乌克兰央行将上调今年GDP预测](https://so.toutiao.com/search?keyword=乌克兰央行将上调今年GDP预测)
-1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
 1. [部分进京方向高速已现返程车流高峰](https://so.toutiao.com/search?keyword=部分进京方向高速已现返程车流高峰)
 1. [这年头结婚连喜糖也卷麻了](https://so.toutiao.com/search?keyword=这年头结婚连喜糖也卷麻了)
 1. [台风小犬逼近 福建多地景区关闭](https://so.toutiao.com/search?keyword=台风小犬逼近+福建多地景区关闭)
