--- a/archives/toutiao-search/2023-10-04.md
+++ b/archives/toutiao-search/2023-10-04.md
@@ -1,58 +1,84 @@
 # 2023-10-04
 
-共 327 条
+共 351 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 04 2023 22:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 04 2023 23:00:48 GMT+0800 (China Standard Time) -->
 1. [中国男篮1分输菲律宾无缘亚运决赛](https://so.toutiao.com/search?keyword=中国男篮1分输菲律宾无缘亚运决赛)
 1. [麦卡锡成美国首位遭罢免众院议长](https://so.toutiao.com/search?keyword=麦卡锡成美国首位遭罢免众院议长)
 1. [公交车上的医院助力亚运医疗保障](https://so.toutiao.com/search?keyword=公交车上的医院助力亚运医疗保障)
-1. [马英九强硬反“台独”意味着什么](https://so.toutiao.com/search?keyword=马英九强硬反“台独”意味着什么)
-1. [中国跳水队包揽10金完美收官](https://so.toutiao.com/search?keyword=中国跳水队包揽10金完美收官)
-1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
-1. [游客自驾冲进羊群致30多只羊死伤](https://so.toutiao.com/search?keyword=游客自驾冲进羊群致30多只羊死伤)
-1. [印尼攀岩运动员起步失误仍反超对手](https://so.toutiao.com/search?keyword=印尼攀岩运动员起步失误仍反超对手)
-1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
+1. [徐静雨怒斥男篮主帅：立即下课](https://so.toutiao.com/search?keyword=徐静雨怒斥男篮主帅：立即下课)
+1. [宁波多名女子摆贡品放生矿泉水](https://so.toutiao.com/search?keyword=宁波多名女子摆贡品放生矿泉水)
+1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
+1. [媒体人评王哲林：怎么都学不会](https://so.toutiao.com/search?keyword=媒体人评王哲林：怎么都学不会)
 1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
-1. [中国游客回忆曼谷枪击案惊魂现场](https://so.toutiao.com/search?keyword=中国游客回忆曼谷枪击案惊魂现场)
+1. [“金刚芭比”袁琦琦火出圈](https://so.toutiao.com/search?keyword=“金刚芭比”袁琦琦火出圈)
+1. [男篮输球后姚明叉腰眼神空洞](https://so.toutiao.com/search?keyword=男篮输球后姚明叉腰眼神空洞)
+1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
 1. [官方辟谣举报高速违章1分钟赚3千](https://so.toutiao.com/search?keyword=官方辟谣举报高速违章1分钟赚3千)
 1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
-1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
+1. [中国男篮再负菲律宾该由谁背锅](https://so.toutiao.com/search?keyword=中国男篮再负菲律宾该由谁背锅)
+1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
+1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
+1. [足球媒体人评中国男篮：彻底男足化](https://so.toutiao.com/search?keyword=足球媒体人评中国男篮：彻底男足化)
+1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
+1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
+1. [媒体人评男篮主帅：神仙也救不了你](https://so.toutiao.com/search?keyword=媒体人评男篮主帅：神仙也救不了你)
+1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
+1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
+1. [再次超神 菲律宾归化球员狂砍33分](https://so.toutiao.com/search?keyword=再次超神+菲律宾归化球员狂砍33分)
 1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
+1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
+1. [中国男篮世界杯、亚运遭菲律宾双杀](https://so.toutiao.com/search?keyword=中国男篮世界杯、亚运遭菲律宾双杀)
+1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
+1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
+1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
+1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
+1. [中国游客回忆曼谷枪击案惊魂现场](https://so.toutiao.com/search?keyword=中国游客回忆曼谷枪击案惊魂现场)
+1. [孙颖莎：开幕式宣誓倍感荣耀](https://so.toutiao.com/search?keyword=孙颖莎：开幕式宣誓倍感荣耀)
+1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
+1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
+1. [棒球小组赛：中国队1-0战胜日本队](https://so.toutiao.com/search?keyword=棒球小组赛：中国队1-0战胜日本队)
+1. [张颂文赞叹《志愿军》置景](https://so.toutiao.com/search?keyword=张颂文赞叹《志愿军》置景)
+1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
+1. [《前任4》有哪些经典台词](https://so.toutiao.com/search?keyword=《前任4》有哪些经典台词)
+1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
+1. [男子投喂熊猫被终身禁入成都基地](https://so.toutiao.com/search?keyword=男子投喂熊猫被终身禁入成都基地)
+1. [一对新人定制公交车接亲高调官宣](https://so.toutiao.com/search?keyword=一对新人定制公交车接亲高调官宣)
+1. [张文宏点评mRNA疫苗技术获诺奖](https://so.toutiao.com/search?keyword=张文宏点评mRNA疫苗技术获诺奖)
+1. [《坚如磐石》出圈名场面](https://so.toutiao.com/search?keyword=《坚如磐石》出圈名场面)
+1. [运动员陆续返程 回国行李箱大揭秘](https://so.toutiao.com/search?keyword=运动员陆续返程+回国行李箱大揭秘)
+1. [韩庚路演现场助力观众求婚](https://so.toutiao.com/search?keyword=韩庚路演现场助力观众求婚)
+1. [杭州亚运会票务收入突破6亿](https://so.toutiao.com/search?keyword=杭州亚运会票务收入突破6亿)
+1. [瑞银下调黄金价格预测](https://so.toutiao.com/search?keyword=瑞银下调黄金价格预测)
+1. [霍启刚感谢观众为中国香港队加油](https://so.toutiao.com/search?keyword=霍启刚感谢观众为中国香港队加油)
+1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
+1. [男子秦岭偶遇一公一母两只野生羚牛](https://so.toutiao.com/search?keyword=男子秦岭偶遇一公一母两只野生羚牛)
+1. [马英九强硬反“台独”意味着什么](https://so.toutiao.com/search?keyword=马英九强硬反“台独”意味着什么)
+1. [中国跳水队包揽10金完美收官](https://so.toutiao.com/search?keyword=中国跳水队包揽10金完美收官)
+1. [游客自驾冲进羊群致30多只羊死伤](https://so.toutiao.com/search?keyword=游客自驾冲进羊群致30多只羊死伤)
+1. [印尼攀岩运动员起步失误仍反超对手](https://so.toutiao.com/search?keyword=印尼攀岩运动员起步失误仍反超对手)
 1. [记者：女足已落伍十年以上](https://so.toutiao.com/search?keyword=记者：女足已落伍十年以上)
 1. [特警碰掉游客小吃重新买了一份](https://so.toutiao.com/search?keyword=特警碰掉游客小吃重新买了一份)
 1. [马德兴：中国香港男足获历史性突破](https://so.toutiao.com/search?keyword=马德兴：中国香港男足获历史性突破)
 1. [假期第六天高速公路流量明显回升](https://so.toutiao.com/search?keyword=假期第六天高速公路流量明显回升)
-1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
 1. [中国台北队终于等到自己人加油](https://so.toutiao.com/search?keyword=中国台北队终于等到自己人加油)
 1. [中国队女子3米跳板包揽金银](https://so.toutiao.com/search?keyword=中国队女子3米跳板包揽金银)
-1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
 1. [各地返程高速路况：车队堵成长龙](https://so.toutiao.com/search?keyword=各地返程高速路况：车队堵成长龙)
-1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
-1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
 1. [全国各地陆续迎来返程交通流](https://so.toutiao.com/search?keyword=全国各地陆续迎来返程交通流)
-1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
 1. [《志愿军》累计观演人次突破1000万](https://so.toutiao.com/search?keyword=《志愿军》累计观演人次突破1000万)
-1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
-1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
 1. [亚冠：三镇1-3浦项积1分排小组第3](https://so.toutiao.com/search?keyword=亚冠：三镇1-3浦项积1分排小组第3)
 1. [外媒：麦卡锡被罢免 谁是接班人](https://so.toutiao.com/search?keyword=外媒：麦卡锡被罢免+谁是接班人)
-1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
 1. [记者“哄娃式”采访全红婵](https://so.toutiao.com/search?keyword=记者“哄娃式”采访全红婵)
-1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
 1. [西工大仿生飞行器刷新世界纪录](https://so.toutiao.com/search?keyword=西工大仿生飞行器刷新世界纪录)
 1. [拜登讲话时“突然僵住”](https://so.toutiao.com/search?keyword=拜登讲话时“突然僵住”)
 1. [《志愿军》还原了哪些真实场景](https://so.toutiao.com/search?keyword=《志愿军》还原了哪些真实场景)
-1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
 1. [全红婵采访为何总躲陈芋汐身后](https://so.toutiao.com/search?keyword=全红婵采访为何总躲陈芋汐身后)
 1. [欧盟对华电动汽车下手犯了哪些错误](https://so.toutiao.com/search?keyword=欧盟对华电动汽车下手犯了哪些错误)
 1. [台军“自造潜艇”被批粗制滥造](https://so.toutiao.com/search?keyword=台军“自造潜艇”被批粗制滥造)
 1. [泰枪击案嫌疑人被捕后曾与警察对话](https://so.toutiao.com/search?keyword=泰枪击案嫌疑人被捕后曾与警察对话)
-1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
-1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
 1. [女生张开双臂录视频 路人以为索抱](https://so.toutiao.com/search?keyword=女生张开双臂录视频+路人以为索抱)
 1. [饶欣雨获得田径女子800米第四名](https://so.toutiao.com/search?keyword=饶欣雨获得田径女子800米第四名)
-1. [张文宏点评mRNA疫苗技术获诺奖](https://so.toutiao.com/search?keyword=张文宏点评mRNA疫苗技术获诺奖)
 1. [三张图看清陈艺文“水花消失术”](https://so.toutiao.com/search?keyword=三张图看清陈艺文“水花消失术”)
 1. [中国男篮vs菲律宾冲击亚运决赛](https://so.toutiao.com/search?keyword=中国男篮vs菲律宾冲击亚运决赛)
 1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
@@ -66,11 +92,9 @@
 1. [中国香港男足止步亚运会半决赛](https://so.toutiao.com/search?keyword=中国香港男足止步亚运会半决赛)
 1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
 1. [媒体：消费者有权对乱收费说“不”](https://so.toutiao.com/search?keyword=媒体：消费者有权对乱收费说“不”)
-1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
 1. [花两万多买摩托车却上不了牌照](https://so.toutiao.com/search?keyword=花两万多买摩托车却上不了牌照)
 1. [“国民女儿”全红婵请继续你的可爱](https://so.toutiao.com/search?keyword=“国民女儿”全红婵请继续你的可爱)
 1. [北京：假期后段及节后交通压力较大](https://so.toutiao.com/search?keyword=北京：假期后段及节后交通压力较大)
-1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
 1. [中国女排3-0韩国 提前锁定四强](https://so.toutiao.com/search?keyword=中国女排3-0韩国+提前锁定四强)
 1. [俄军称防空系统拦截31架乌军无人机](https://so.toutiao.com/search?keyword=俄军称防空系统拦截31架乌军无人机)
 1. [大熊猫渝可和奶妈的双向奔赴](https://so.toutiao.com/search?keyword=大熊猫渝可和奶妈的双向奔赴)
