--- a/archives/toutiao-search/2023-10-05.md
+++ b/archives/toutiao-search/2023-10-05.md
@@ -1,64 +1,71 @@
 # 2023-10-05
 
-共 76 条
+共 82 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 05 2023 03:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Oct 05 2023 04:00:46 GMT+0800 (China Standard Time) -->
 1. [中国男篮1分输菲律宾无缘亚运决赛](https://so.toutiao.com/search?keyword=中国男篮1分输菲律宾无缘亚运决赛)
-1. [男篮输球后姚明叉腰眼神空洞](https://so.toutiao.com/search?keyword=男篮输球后姚明叉腰眼神空洞)
+1. [美众议院投票罢免麦卡锡议长职务](https://so.toutiao.com/search?keyword=美众议院投票罢免麦卡锡议长职务)
 1. [公交车上的医院助力亚运医疗保障](https://so.toutiao.com/search?keyword=公交车上的医院助力亚运医疗保障)
-1. [警方回应南阳迷笛音乐节现偷盗事件](https://so.toutiao.com/search?keyword=警方回应南阳迷笛音乐节现偷盗事件)
-1. [中国男篮再负菲律宾该由谁背锅](https://so.toutiao.com/search?keyword=中国男篮再负菲律宾该由谁背锅)
-1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
-1. [凌晨回家怕被父母发现却被猫咪抓包](https://so.toutiao.com/search?keyword=凌晨回家怕被父母发现却被猫咪抓包)
-1. [徐静雨怒斥男篮主帅：立即下课](https://so.toutiao.com/search?keyword=徐静雨怒斥男篮主帅：立即下课)
-1. [大爷被穿短裙女子指责看腿后发飙](https://so.toutiao.com/search?keyword=大爷被穿短裙女子指责看腿后发飙)
+1. [男篮输球后姚明叉腰眼神空洞](https://so.toutiao.com/search?keyword=男篮输球后姚明叉腰眼神空洞)
+1. [麦卡锡成美国首位遭罢免众院议长](https://so.toutiao.com/search?keyword=麦卡锡成美国首位遭罢免众院议长)
 1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
+1. [徐静雨怒斥男篮主帅：立即下课](https://so.toutiao.com/search?keyword=徐静雨怒斥男篮主帅：立即下课)
+1. [媒体：罢免麦卡锡开启美国多事之秋](https://so.toutiao.com/search?keyword=媒体：罢免麦卡锡开启美国多事之秋)
+1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
 1. [媒体人评男篮主帅：神仙也救不了你](https://so.toutiao.com/search?keyword=媒体人评男篮主帅：神仙也救不了你)
+1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
 1. [官方辟谣举报高速违章1分钟赚3千](https://so.toutiao.com/search?keyword=官方辟谣举报高速违章1分钟赚3千)
 1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
-1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
 1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
 1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
-1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
 1. [小伙称因长期抠鼻子感染丹毒](https://so.toutiao.com/search?keyword=小伙称因长期抠鼻子感染丹毒)
+1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
 1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
+1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
 1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
 1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
-1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
-1. [男篮主帅：输球是一件正常的事情](https://so.toutiao.com/search?keyword=男篮主帅：输球是一件正常的事情)
+1. [俄方称燃油出口禁令产生了积极效果](https://so.toutiao.com/search?keyword=俄方称燃油出口禁令产生了积极效果)
 1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
 1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
-1. [俄方称燃油出口禁令产生了积极效果](https://so.toutiao.com/search?keyword=俄方称燃油出口禁令产生了积极效果)
-1. [10月10日开启第20轮油价调整窗口](https://so.toutiao.com/search?keyword=10月10日开启第20轮油价调整窗口)
-1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
-1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
-1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
-1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
-1. [2023国庆档电影最大赢家是谁](https://so.toutiao.com/search?keyword=2023国庆档电影最大赢家是谁)
-1. [首推和首创科技应用扎堆杭州亚运会](https://so.toutiao.com/search?keyword=首推和首创科技应用扎堆杭州亚运会)
-1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
 1. [自动驾驶真能替代司机吗](https://so.toutiao.com/search?keyword=自动驾驶真能替代司机吗)
+1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
+1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
+1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
+1. [男篮主帅：输球是一件正常的事情](https://so.toutiao.com/search?keyword=男篮主帅：输球是一件正常的事情)
+1. [高盛担心利率高企令美股进一步下跌](https://so.toutiao.com/search?keyword=高盛担心利率高企令美股进一步下跌)
+1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
 1. [男子问饭店内顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店内顾客好吃吗+回答亮了)
+1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
+1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
+1. [10月10日开启第20轮油价调整窗口](https://so.toutiao.com/search?keyword=10月10日开启第20轮油价调整窗口)
+1. [2023国庆档电影最大赢家是谁](https://so.toutiao.com/search?keyword=2023国庆档电影最大赢家是谁)
+1. [美联储博斯蒂克：不急于再次加息](https://so.toutiao.com/search?keyword=美联储博斯蒂克：不急于再次加息)
+1. [大爷被穿短裙女子指责看腿后发飙](https://so.toutiao.com/search?keyword=大爷被穿短裙女子指责看腿后发飙)
+1. [杨毅谈男篮落败：这次真俩眼一摸黑](https://so.toutiao.com/search?keyword=杨毅谈男篮落败：这次真俩眼一摸黑)
+1. [刘瑞夺亚运会摔跤首块奖牌](https://so.toutiao.com/search?keyword=刘瑞夺亚运会摔跤首块奖牌)
 1. [男子投喂熊猫被终身禁入成都基地](https://so.toutiao.com/search?keyword=男子投喂熊猫被终身禁入成都基地)
 1. [林一劝粉丝不要对合作同事口出恶言](https://so.toutiao.com/search?keyword=林一劝粉丝不要对合作同事口出恶言)
+1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
+1. [诺奖获得者为何还是副教授](https://so.toutiao.com/search?keyword=诺奖获得者为何还是副教授)
+1. [媒体：泰山队输球是可以接受的结局](https://so.toutiao.com/search?keyword=媒体：泰山队输球是可以接受的结局)
+1. [沙特重申继续维持自愿减产至年底](https://so.toutiao.com/search?keyword=沙特重申继续维持自愿减产至年底)
 1. [电影《志愿军》章子怡的一滴泪](https://so.toutiao.com/search?keyword=电影《志愿军》章子怡的一滴泪)
+1. [足球媒体人评中国男篮：彻底男足化](https://so.toutiao.com/search?keyword=足球媒体人评中国男篮：彻底男足化)
+1. [日本男子采蘑菇时遭熊近身攻击](https://so.toutiao.com/search?keyword=日本男子采蘑菇时遭熊近身攻击)
+1. [充电机器人缓解新能源车充电焦虑](https://so.toutiao.com/search?keyword=充电机器人缓解新能源车充电焦虑)
+1. [警方回应南阳迷笛音乐节现偷盗事件](https://so.toutiao.com/search?keyword=警方回应南阳迷笛音乐节现偷盗事件)
+1. [中国男篮再负菲律宾该由谁背锅](https://so.toutiao.com/search?keyword=中国男篮再负菲律宾该由谁背锅)
+1. [凌晨回家怕被父母发现却被猫咪抓包](https://so.toutiao.com/search?keyword=凌晨回家怕被父母发现却被猫咪抓包)
+1. [首推和首创科技应用扎堆杭州亚运会](https://so.toutiao.com/search?keyword=首推和首创科技应用扎堆杭州亚运会)
 1. [张文宏点评mRNA疫苗技术获诺奖](https://so.toutiao.com/search?keyword=张文宏点评mRNA疫苗技术获诺奖)
 1. [《前任4》有哪些经典台词](https://so.toutiao.com/search?keyword=《前任4》有哪些经典台词)
 1. [杭州亚运会票务收入突破6亿](https://so.toutiao.com/search?keyword=杭州亚运会票务收入突破6亿)
-1. [沙特重申继续维持自愿减产至年底](https://so.toutiao.com/search?keyword=沙特重申继续维持自愿减产至年底)
-1. [媒体：泰山队输球是可以接受的结局](https://so.toutiao.com/search?keyword=媒体：泰山队输球是可以接受的结局)
-1. [美媒：中国队主场优势不可撼动](https://so.toutiao.com/search?keyword=美媒：中国队主场优势不可撼动)
-1. [诺奖获得者为何还是副教授](https://so.toutiao.com/search?keyword=诺奖获得者为何还是副教授)
 1. [澳媒妄议中国与东帝汶关系被批](https://so.toutiao.com/search?keyword=澳媒妄议中国与东帝汶关系被批)
 1. [再次超神 菲律宾归化球员狂砍33分](https://so.toutiao.com/search?keyword=再次超神+菲律宾归化球员狂砍33分)
 1. [重庆雨夜一把伞下的人情味](https://so.toutiao.com/search?keyword=重庆雨夜一把伞下的人情味)
-1. [美联储博斯蒂克：不急于再次加息](https://so.toutiao.com/search?keyword=美联储博斯蒂克：不急于再次加息)
-1. [杨毅谈男篮落败：这次真俩眼一摸黑](https://so.toutiao.com/search?keyword=杨毅谈男篮落败：这次真俩眼一摸黑)
-1. [足球媒体人评中国男篮：彻底男足化](https://so.toutiao.com/search?keyword=足球媒体人评中国男篮：彻底男足化)
 1. [菲棉兰老岛附近海域发生6.4级地震](https://so.toutiao.com/search?keyword=菲棉兰老岛附近海域发生6.4级地震)
 1. [媒体人评王哲林：怎么都学不会](https://so.toutiao.com/search?keyword=媒体人评王哲林：怎么都学不会)
-1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
 1. [苏炳添等中国田径7将递补奥运奖牌](https://so.toutiao.com/search?keyword=苏炳添等中国田径7将递补奥运奖牌)
 1. [霍启刚感谢观众为中国香港队加油](https://so.toutiao.com/search?keyword=霍启刚感谢观众为中国香港队加油)
 1. [张雨霏妈妈：为不服输的女儿骄傲](https://so.toutiao.com/search?keyword=张雨霏妈妈：为不服输的女儿骄傲)
@@ -68,7 +75,6 @@
 1. [《坚如磐石》出圈名场面](https://so.toutiao.com/search?keyword=《坚如磐石》出圈名场面)
 1. [曝iPhone 16打样线已在成都建好](https://so.toutiao.com/search?keyword=曝iPhone+16打样线已在成都建好)
 1. [蔡国庆脑洞大开告五人变“告五仁”](https://so.toutiao.com/search?keyword=蔡国庆脑洞大开告五人变“告五仁”)
-1. [充电机器人缓解新能源车充电焦虑](https://so.toutiao.com/search?keyword=充电机器人缓解新能源车充电焦虑)
 1. [雷佳音：我要成为一个好演员](https://so.toutiao.com/search?keyword=雷佳音：我要成为一个好演员)
 1. [婚礼现场新娘沉浸式“搂席”](https://so.toutiao.com/search?keyword=婚礼现场新娘沉浸式“搂席”)
 1. [男子秦岭偶遇一公一母两只野生羚牛](https://so.toutiao.com/search?keyword=男子秦岭偶遇一公一母两只野生羚牛)
