--- a/archives/toutiao-search/2023-10-05.md
+++ b/archives/toutiao-search/2023-10-05.md
@@ -1,54 +1,73 @@
 # 2023-10-05
 
-共 119 条
+共 137 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Oct 05 2023 08:24:06 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Oct 05 2023 09:42:34 GMT+0800 (China Standard Time) -->
 1. [中国男篮再负菲律宾该由谁背锅](https://so.toutiao.com/search?keyword=中国男篮再负菲律宾该由谁背锅)
-1. [姚明就男篮一度取消赛后发布会道歉](https://so.toutiao.com/search?keyword=姚明就男篮一度取消赛后发布会道歉)
-1. [公交车上的医院助力亚运医疗保障](https://so.toutiao.com/search?keyword=公交车上的医院助力亚运医疗保障)
-1. [足球媒体人评中国男篮：彻底男足化](https://so.toutiao.com/search?keyword=足球媒体人评中国男篮：彻底男足化)
 1. [中方：菲律宾4艘船非法侵闯仁爱礁](https://so.toutiao.com/search?keyword=中方：菲律宾4艘船非法侵闯仁爱礁)
+1. [公交车上的医院助力亚运医疗保障](https://so.toutiao.com/search?keyword=公交车上的医院助力亚运医疗保障)
+1. [徐静雨怒斥男篮主帅：立即下课](https://so.toutiao.com/search?keyword=徐静雨怒斥男篮主帅：立即下课)
+1. [亚运会发现三例兴奋剂检测阳性](https://so.toutiao.com/search?keyword=亚运会发现三例兴奋剂检测阳性)
 1. [超市歇业通知：女儿亚运会收获两金](https://so.toutiao.com/search?keyword=超市歇业通知：女儿亚运会收获两金)
-1. [杨毅谈男篮落败：这次真俩眼一摸黑](https://so.toutiao.com/search?keyword=杨毅谈男篮落败：这次真俩眼一摸黑)
-1. [现场直击迟到的奥运奖牌](https://so.toutiao.com/search?keyword=现场直击迟到的奥运奖牌)
+1. [中国男篮世界杯、亚运遭菲律宾双杀](https://so.toutiao.com/search?keyword=中国男篮世界杯、亚运遭菲律宾双杀)
+1. [台湾青年支持统一被大陆爷爷赞赏](https://so.toutiao.com/search?keyword=台湾青年支持统一被大陆爷爷赞赏)
 1. [10月15日起全面禁止校外培训？假的](https://so.toutiao.com/search?keyword=10月15日起全面禁止校外培训？假的)
-1. [麦迪看中国男篮比赛不理解为何会输](https://so.toutiao.com/search?keyword=麦迪看中国男篮比赛不理解为何会输)
+1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
 1. [哈尔滨房企组团到南京卖房0成交](https://so.toutiao.com/search?keyword=哈尔滨房企组团到南京卖房0成交)
 1. [男子下跪献花被女生一脚拦住](https://so.toutiao.com/search?keyword=男子下跪献花被女生一脚拦住)
-1. [徐静雨怒斥男篮主帅：立即下课](https://so.toutiao.com/search?keyword=徐静雨怒斥男篮主帅：立即下课)
+1. [为何在亚运会上颁发奥运会奖牌](https://so.toutiao.com/search?keyword=为何在亚运会上颁发奥运会奖牌)
 1. [甄妮喊话郑少秋多关心郑欣宜](https://so.toutiao.com/search?keyword=甄妮喊话郑少秋多关心郑欣宜)
+1. [外国人：美面对华为芯片像疯了一样](https://so.toutiao.com/search?keyword=外国人：美面对华为芯片像疯了一样)
+1. [切阳什姐获颁奥运金牌激动落泪](https://so.toutiao.com/search?keyword=切阳什姐获颁奥运金牌激动落泪)
+1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
+1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
+1. [亚运会今日看点](https://so.toutiao.com/search?keyword=亚运会今日看点)
+1. [本届亚运会男子三大球成绩单](https://so.toutiao.com/search?keyword=本届亚运会男子三大球成绩单)
+1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
+1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
+1. [王春雨获铜牌赛后哭着说对不起](https://so.toutiao.com/search?keyword=王春雨获铜牌赛后哭着说对不起)
 1. [获诺贝尔化学奖的量子点是什么](https://so.toutiao.com/search?keyword=获诺贝尔化学奖的量子点是什么)
-1. [赵继伟道歉](https://so.toutiao.com/search?keyword=赵继伟道歉)
+1. [奶奶给孙子零花钱接头动作亮了](https://so.toutiao.com/search?keyword=奶奶给孙子零花钱接头动作亮了)
 1. [王仕鹏：怕男篮这批孩子站不起来了](https://so.toutiao.com/search?keyword=王仕鹏：怕男篮这批孩子站不起来了)
+1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
+1. [10月10日开启第20轮油价调整窗口](https://so.toutiao.com/search?keyword=10月10日开启第20轮油价调整窗口)
+1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
+1. [攀岩女子速度接力中国队夺金](https://so.toutiao.com/search?keyword=攀岩女子速度接力中国队夺金)
+1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
+1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
+1. [邵新宇任湖北省常务副省长](https://so.toutiao.com/search?keyword=邵新宇任湖北省常务副省长)
+1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
+1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
+1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
+1. [苹果CEO套现近3亿元](https://so.toutiao.com/search?keyword=苹果CEO套现近3亿元)
+1. [女子三级跳远摘银 曾蕊连说对不起](https://so.toutiao.com/search?keyword=女子三级跳远摘银+曾蕊连说对不起)
 1. [切阳什姐一天拿下奥运亚运两枚金牌](https://so.toutiao.com/search?keyword=切阳什姐一天拿下奥运亚运两枚金牌)
+1. [辅导员假借代缴学费骗7学生3万余元](https://so.toutiao.com/search?keyword=辅导员假借代缴学费骗7学生3万余元)
+1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
+1. [男子婚礼上让哈士奇送戒指](https://so.toutiao.com/search?keyword=男子婚礼上让哈士奇送戒指)
+1. [七国集团就援助乌克兰达成一致](https://so.toutiao.com/search?keyword=七国集团就援助乌克兰达成一致)
+1. [线下商超售“酱香拿铁奶茶”引热议](https://so.toutiao.com/search?keyword=线下商超售“酱香拿铁奶茶”引热议)
+1. [夫妻离婚争人工授精孩子抚养权](https://so.toutiao.com/search?keyword=夫妻离婚争人工授精孩子抚养权)
+1. [弟弟结婚董宇辉回家帮忙成碍眼包](https://so.toutiao.com/search?keyword=弟弟结婚董宇辉回家帮忙成碍眼包)
+1. [卖家回应酱香拿铁饮品“撞脸”瑞幸](https://so.toutiao.com/search?keyword=卖家回应酱香拿铁饮品“撞脸”瑞幸)
+1. [沙特将申办2034年世界杯](https://so.toutiao.com/search?keyword=沙特将申办2034年世界杯)
+1. [姚明就男篮一度取消赛后发布会道歉](https://so.toutiao.com/search?keyword=姚明就男篮一度取消赛后发布会道歉)
+1. [男子问饭店内顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店内顾客好吃吗+回答亮了)
+1. [足球媒体人评中国男篮：彻底男足化](https://so.toutiao.com/search?keyword=足球媒体人评中国男篮：彻底男足化)
+1. [杨毅谈男篮落败：这次真俩眼一摸黑](https://so.toutiao.com/search?keyword=杨毅谈男篮落败：这次真俩眼一摸黑)
+1. [现场直击迟到的奥运奖牌](https://so.toutiao.com/search?keyword=现场直击迟到的奥运奖牌)
+1. [麦迪看中国男篮比赛不理解为何会输](https://so.toutiao.com/search?keyword=麦迪看中国男篮比赛不理解为何会输)
+1. [赵继伟道歉](https://so.toutiao.com/search?keyword=赵继伟道歉)
 1. [解说员：男篮最后一分钟想太多](https://so.toutiao.com/search?keyword=解说员：男篮最后一分钟想太多)
 1. [中国女篮决赛战日本：我们准备好了](https://so.toutiao.com/search?keyword=中国女篮决赛战日本：我们准备好了)
-1. [Angelababy方回应被封杀传闻](https://so.toutiao.com/search?keyword=Angelababy方回应被封杀传闻)
-1. [运营方回应“停车7168天需缴14万”](https://so.toutiao.com/search?keyword=运营方回应“停车7168天需缴14万”)
-1. [谁将接替麦卡锡出任美众议院议长](https://so.toutiao.com/search?keyword=谁将接替麦卡锡出任美众议院议长)
-1. [男子晒花生10分钟被鸟吃光](https://so.toutiao.com/search?keyword=男子晒花生10分钟被鸟吃光)
 1. [媒体：输球之后 消失的中国男篮](https://so.toutiao.com/search?keyword=媒体：输球之后+消失的中国男篮)
-1. [奶奶给孙子零花钱接头动作亮了](https://so.toutiao.com/search?keyword=奶奶给孙子零花钱接头动作亮了)
-1. [台湾青年支持统一被大陆爷爷赞赏](https://so.toutiao.com/search?keyword=台湾青年支持统一被大陆爷爷赞赏)
-1. [射击冠军张博文：手插裤兜是在捏自己](https://so.toutiao.com/search?keyword=射击冠军张博文：手插裤兜是在捏自己)
-1. [太行山景区有游客集体喊“退票”](https://so.toutiao.com/search?keyword=太行山景区有游客集体喊“退票”)
-1. [三位科学家获2023诺贝尔化学奖](https://so.toutiao.com/search?keyword=三位科学家获2023诺贝尔化学奖)
 1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
 1. [向佐直播抱女儿违规了](https://so.toutiao.com/search?keyword=向佐直播抱女儿违规了)
-1. [金价下降有人一口气买走百万元金条](https://so.toutiao.com/search?keyword=金价下降有人一口气买走百万元金条)
-1. [泰国枪击案死伤中国游客为免签入境](https://so.toutiao.com/search?keyword=泰国枪击案死伤中国游客为免签入境)
-1. [全红婵陈芋汐回应被称“天才少女”](https://so.toutiao.com/search?keyword=全红婵陈芋汐回应被称“天才少女”)
 1. [亚运会两名运动员兴奋剂检测阳性](https://so.toutiao.com/search?keyword=亚运会两名运动员兴奋剂检测阳性)
-1. [泰国总理已致电中国大使道歉](https://so.toutiao.com/search?keyword=泰国总理已致电中国大使道歉)
-1. [10月10日开启第20轮油价调整窗口](https://so.toutiao.com/search?keyword=10月10日开启第20轮油价调整窗口)
-1. [邵新宇任湖北省常务副省长](https://so.toutiao.com/search?keyword=邵新宇任湖北省常务副省长)
 1. [媒体评亚运会bgm火出圈](https://so.toutiao.com/search?keyword=媒体评亚运会bgm火出圈)
-1. [网球冠军张之臻：发球是我的武器](https://so.toutiao.com/search?keyword=网球冠军张之臻：发球是我的武器)
 1. [中国接力姑娘说摘金太满意了](https://so.toutiao.com/search?keyword=中国接力姑娘说摘金太满意了)
-1. [男子婚礼上让哈士奇送戒指](https://so.toutiao.com/search?keyword=男子婚礼上让哈士奇送戒指)
 1. [苹果iOS 17.0.3正式版发布](https://so.toutiao.com/search?keyword=苹果iOS+17.0.3正式版发布)
-1. [男子问饭店内顾客好吃吗 回答亮了](https://so.toutiao.com/search?keyword=男子问饭店内顾客好吃吗+回答亮了)
 1. [电影《志愿军》章子怡的一滴泪](https://so.toutiao.com/search?keyword=电影《志愿军》章子怡的一滴泪)
 1. [杭州亚运播报员的快乐幕后花絮](https://so.toutiao.com/search?keyword=杭州亚运播报员的快乐幕后花絮)
 1. [男子投喂熊猫被终身禁入成都基地](https://so.toutiao.com/search?keyword=男子投喂熊猫被终身禁入成都基地)
@@ -108,7 +127,6 @@
 1. [苏炳添等中国田径7将递补奥运奖牌](https://so.toutiao.com/search?keyword=苏炳添等中国田径7将递补奥运奖牌)
 1. [霍启刚感谢观众为中国香港队加油](https://so.toutiao.com/search?keyword=霍启刚感谢观众为中国香港队加油)
 1. [张雨霏妈妈：为不服输的女儿骄傲](https://so.toutiao.com/search?keyword=张雨霏妈妈：为不服输的女儿骄傲)
-1. [中国男篮世界杯、亚运遭菲律宾双杀](https://so.toutiao.com/search?keyword=中国男篮世界杯、亚运遭菲律宾双杀)
 1. [《前任4》承包假期笑点](https://so.toutiao.com/search?keyword=《前任4》承包假期笑点)
 1. [“金刚芭比”袁琦琦火出圈](https://so.toutiao.com/search?keyword=“金刚芭比”袁琦琦火出圈)
 1. [《坚如磐石》出圈名场面](https://so.toutiao.com/search?keyword=《坚如磐石》出圈名场面)
